<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.prosilion</groupId>
  <artifactId>superconductor</artifactId>
  <version>1.11.0</version>
  <name>superconductor</name>
  <description>SuperConductor Java Nostr-Relay Framework and Web Application</description>
  <packaging>war</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.5</version>
  </parent>

  <properties>
    <java.version>21</java.version>
    <spring-boot.version>${parent.version}</spring-boot.version>
    <nostr-java.version>0.6.5-SNAPSHOT</nostr-java.version>

    <awaitility.version>4.2.0</awaitility.version>
    <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
    <guava.version>33.2.1-jre</guava.version>
    <h2.version>2.2.224</h2.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <junit-jupiter.version>5.10.2</junit-jupiter.version>
    <lombok.version>1.18.34</lombok.version>
    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
    <postgresql.version>42.7.3</postgresql.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>xyz.tcheeric</groupId>
      <artifactId>nostr-java-api</artifactId>
      <version>${nostr-java.version}</version>
    </dependency>
    <dependency>
      <groupId>xyz.tcheeric</groupId>
      <artifactId>nostr-java-event</artifactId>
      <version>${nostr-java.version}</version>
    </dependency>
    <dependency>
      <groupId>xyz.tcheeric</groupId>
      <artifactId>nostr-java-id</artifactId>
      <version>${nostr-java.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-docker-compose</artifactId>
      <version>${spring-boot.version}</version>
      <!--      <optional>true</optional>-->
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>${mysql-connector-j.version}</version>
      <!--      TODO: try remove below if all works after commit -->
      <!--      <optional>true</optional>-->
      <scope>runtime</scope>
    </dependency>
    <!--    <dependency>-->
    <!--      <groupId>org.postgresql</groupId>-->
    <!--      <artifactId>postgresql</artifactId>-->
    <!--      <version>${postgresql.version}</version>-->
    <!--      <scope>runtime</scope>-->
    <!--    </dependency>-->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>${h2.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <version>${spring-boot.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${awaitility.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>

      <!--      below:                                                      -->
      <!--          superconductor as a non-executable fatJar/dependency    -->
      <!--      if useful for you, simply uncomment below for inclusion     -->
      <!--                                                                  -->
      <!--      <plugin>-->
      <!--        <groupId>org.apache.maven.plugins</groupId>-->
      <!--        <artifactId>maven-assembly-plugin</artifactId>-->
      <!--        <configuration>-->
      <!--          <descriptorRefs>-->
      <!--            <descriptorRef>jar-with-dependencies</descriptorRef>-->
      <!--          </descriptorRefs>-->
      <!--        </configuration>-->
      <!--        <executions>-->
      <!--          <execution>-->
      <!--            <id>make-assembly</id>-->
      <!--            <phase>package</phase>-->
      <!--            <goals>-->
      <!--              <goal>single</goal>-->
      <!--            </goals>-->
      <!--          </execution>-->
      <!--        </executions>-->
      <!--      </plugin>-->

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <image>
            <builder>paketobuildpacks/builder-jammy-base:latest</builder>
          </image>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>local_ws</id>
      <properties>
        <spring.profiles.active>local_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>local_wss</id>
      <properties>
        <spring.profiles.active>local_wss</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>dev_ws</id>
      <properties>
        <spring.profiles.active>dev_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>dev_wss</id>
      <properties>
        <spring.profiles.active>dev_wss</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>prod_ws</id>
      <properties>
        <spring.profiles.active>prod_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>prod_wss</id>
      <properties>
        <spring.profiles.active>prod_wss</spring.profiles.active>
      </properties>
    </profile>
  </profiles>
</project>
